# mlx-trader-frontend

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: AlertsPanel.svelte  ChatView.svelte  MarketHeader.svelte  Sidebar.svelte  Splash.svelte  api.js
