[package]
name = "mlx-trader-app"
version = "0.1.0"
description = "MLX Trader native Mac analyst"
authors = ["Dreamer528"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mlx_trader_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
